chore: 更新配置和代码以适应JDK 11环境 - 添加.gitignore文件忽略常见不需要版本控制的文件 - 更新TResource实体类字段注解 - 修改application.yml中的数据库配置为本地开发环境 - 升级pom.xml中的Java版本至11并移除过时配置 - 替换DesUtil中的Base64实现为JDK标准库