@@ -1,7 +1,6 @@
 package cn.ityao.wall.util.encryption;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import java.util.Base64;
 
 import javax.crypto.*;
 import javax.crypto.spec.SecretKeySpec;
@@ -40,7 +39,7 @@ public class DesUtil {
             cipher.init(Cipher.ENCRYPT_MODE, key);
             byte[] byte_encode = content.getBytes("utf-8");
             byte[] byte_AES = cipher.doFinal(byte_encode);
-            String AES_encode = new String(new BASE64Encoder().encode(byte_AES));
+            String AES_encode = Base64.getEncoder().encodeToString(byte_AES);
             return AES_encode;
         } catch (NoSuchAlgorithmException e) {
             e.printStackTrace();
@@ -72,7 +71,7 @@ public class DesUtil {
             SecretKey key = new SecretKeySpec(raw, "AES");
             Cipher cipher = Cipher.getInstance("AES");
             cipher.init(Cipher.DECRYPT_MODE, key);
-            byte[] byte_content = new BASE64Decoder().decodeBuffer(content);
+            byte[] byte_content = Base64.getDecoder().decode(content);
             byte[] byte_decode = cipher.doFinal(byte_content);
             String AES_decode = new String(byte_decode, "utf-8");
             return AES_decode;
